<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/annotation_controls_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnotationDetailsFragment">

    <ImageView
        android:id="@+id/prev_Annotation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_navigate_prev"
        android:layout_marginLeft="10dp"
        android:onClick="onPreviousAnnotationClick"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <ImageView
        android:id="@+id/next_Annotation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_navigate_next"
        android:layout_marginRight="10dp"
        android:onClick="onNextAnnotationClick"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_time"
        android:textSize="20sp"
        android:textColor="@color/PrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prev_Annotation" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/SecondaryText"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/start_time_label"
        app:layout_constraintTop_toBottomOf="@id/prev_Annotation" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/category_label"
        android:textColor="@color/PrimaryText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time" />

    <View
        android:id="@+id/view"
        style="@style/DividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_label" />


    <com.example.salsa_videoannotation.MultiSelectionSpinner
        android:id="@+id/categorySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:popupTheme="@color/Menus"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_label" />

    <View
        android:id="@+id/view2"
        style="@style/DividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySelector" />


    <TextView
        android:id="@+id/bodypart_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/bodypart_label"
        android:textColor="@color/PrimaryText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categorySelector" />

    <View
        android:id="@+id/view3"
        style="@style/DividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodypart_label" />


    <com.example.salsa_videoannotation.MultiSelectionSpinner
        android:id="@+id/bodypartSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:popupTheme="@color/Menus"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodypart_label" />

    <View
        android:id="@+id/bodypartBottomDivider"
        style="@style/DividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodypartSelector" />


    <EditText
        android:id="@+id/annotation_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="Enter Annotation Text"
        android:gravity="top|left"
        android:textColor="@color/SecondaryText"
        android:textColorHint="@color/SecondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodypartBottomDivider"
        app:layout_constraintBottom_toTopOf="@+id/save_button"/>


    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Button"
        android:text="@string/delete_annotation"
        android:onClick="onDeleteButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/annotation_content"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@id/delete_button"
        android:backgroundTint="@color/Button"
        android:text="@string/save_changes"
        android:onClick="onSaveChangesAnnotationButtonClick"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/delete_button"
        app:layout_constraintTop_toBottomOf="@id/annotation_content"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/save_button"
        android:backgroundTint="@color/Button"
        android:text="@string/back"
        android:onClick="onBackButtonClick"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/annotation_content"
        app:layout_constraintVertical_bias="1.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>